<resources>
    <string name="app_name">Let\'s Go</string>

    <string name="game_buttonTextPass">Pass</string>

    <string name="main_openMapButtonText">Open Map</string>
    <string name="main_openGameChooserText">Play</string>
    <string name="main_profileButtonText">My Profile</string>

    <string name="game_scoreTitleText">BLACK | Score | WHITE</string>
    <string name="game_scoreDefaultText">0</string>
    <string name="game_blackTurn">BLACK plays next</string>
    <string name="game_whiteTurn">WHITE plays next</string>
    <string name="game_blackYouTurn">YOU (black) play next</string>
    <string name="game_whiteYouTurn">YOU (white) play next</string>
    <string name="game_whitePassTurn">BLACK passed - WHITE next</string>
    <string name="game_blackPassTurn">WHITE passed - BLACK next</string>
    <string name="game_endOfGame">Game is over. Count territories!</string>
    <string name="game_startAsBlack">The game starts! You play as BLACK.</string>
    <string name="game_startAsWhite">The game starts! You play as WHITE.</string>
    <string name="game_startLocal">The game starts! BLACK plays first.</string>
    <string name="game_passTitle">Do you really want to pass? If the opponent passes as well, the game will be over.</string>
    <string name="game_passConfirm">Confirm PASS</string>
    <string name="game_passCancel">Cancel</string>


    <string name="go">Go</string>
    <string name="user_name">User Name</string>
    <string name="upload_your_profile_picture">Upload Your Profile Picture</string>
    <string name="my_nick">Nickname</string>
    <string name="city_country">Country, City</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="save_picture">Save Picture</string>
    <string name="profile_show_friends">Show friends</string>

    <string name="first_last">First, Last</string>
    <string name="profile_noNicknameHint">To add your nickname click Edit</string>
    <string name="profile_button_edit_text">Edit</string>

    <string name="profile_edit_button_save_text">Save</string>
    <string name="profile_edit_nickname">Nickname</string>
    <string name="profile_edit_first">First</string>
    <string name="profile_edit_last">Last</string>
    <string name="profile_edit_country">Country</string>
    <string name="profile_edit_city">City</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_onlineGame">Online Game</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_firebaseui">Login</string>
    <string name="title_activity_waitMatch">Wait Match</string>

    <!-- Strings for tutorial -->
    <string name="tutorial_intro">Congrats for wanting to learn Go, a great strategic game! We have good news for you: Even though Go is hard to master, learning the basic rules is really easy and you will be able to play your first game very soon!</string>
    <string name="tutorial_board">Go is usually played on a squared grid of 19x19 or 9x9 lines. Click on the "next" button to see what it looks like.</string>
    <string name="tutorial_board2">Not yet really complex, right?</string>
    <string name="tutorial_stones">Each of the two players gets a set of stones that is either black or white. The stones can be played at the intersections of the lines. The first stone is played by black, then white can place one stone, then again black and so on. Once a stone is played, it cannot be moved anymore.</string>
    <string name="tutorial_stones2">Place now your first stone on the board.</string>
    <string name="tutorial_territory">One main goal of the game is to control territories, this is what gives you power and points in the end. A territory is empty space on the board that is entirely surrounded by stones of the same color. See the following example.</string>
    <string name="tutorial_territory2">Here, the area on top is territory of Black, and the one on the bottom is territory of White.</string>
    <string name="tutorial_capturing">Capturing stones of the opponent makes them be removed from the board. A stone or a group of stones are captured when it no longer has any empty space directly next to it. These empty spaces are called liberties.</string>
    <string name="tutorial_capturing2">Your opponent runs out of liberties… Go for it!</string>
    <string name="tutorial_selfCapture">Self capture is not allowed in Go. This means, you don\'t have the right to place a stone on a place where it has no liberties - unless this move captures stones of the opponent.</string>
    <string name="tutorial_selfCapture2">In this situation, you as black do not have the right to place your stone at A9. Unfortunately, white can now easily capture your stones.</string>
    <string name="tutorial_twoEyes">Here, you as black have "two eyes" in your group, which makes it uncapturable for white. Don\'t fill the eyes!</string>
    <string name="tutorial_score1">The nice thing about capturing: you get a point for each stone of the opponent you have captured!</string>
    <string name="tutorial_KoRule">There exist situations where the same moves could be repeated over and over again. To prevent this, the Ko rule says that a completely identical board position MUST NOT appear twice in one game. This makes endless recapturing in the same position impossible, as in the following example.</string>
    <string name="tutorial_KoRule2">If you catch white here, then white doesn\'t have the right to catch you back right away. Otherwise, this could end in a never-ending back and forth. </string>
    <string name="tutorial_end">This is the last rule you have to learn! The end of a game of Go is not as clearly defined as in chess or other games. A player at each point in the game can pass if they don\'t see any benefit of placing a stone. The game ends if both players pass consecutively. Then, the points are counted as explained on the next page</string>
    <string name="tutorial_score2">- one point for each yet captured stone\n- one point for every stone in your territory that cannot avoid capturing. Your territory is everything that is entirely surrounded by your stones. This is mostly obvious, and if not, keep on playing until it is. Theses stones are removed from the board.\n- one point for each empty intersection in your territory.\n- some points called komi for the white player, as starting the game is an advantage for black (usually 6.5 points in 19x19 games)</string>
    <string name="tutorial_outro">You reached the end of the tutorial. Have fun playing Go!</string>

    <string name="tutorial_title_intro">Welcome to Go!</string>
    <string name="tutorial_title_board">The Board</string>
    <string name="tutorial_title_stones">The Stones</string>
    <string name="tutorial_title_territories">Territories</string>
    <string name="tutorial_title_capturing">Capturing</string>
    <string name="tutorial_title_selfCapture">Self-Capturing</string>
    <string name="tutorial_title_score1">Score</string>
    <string name="tutorial_title_KoRule">The Ko Rule</string>
    <string name="tutorial_title_end">End of Game</string>
    <string name="tutorial_title_score2">Final Score</string>
    <string name="tutorial_title_outro">Congrats!</string>

    <!-- Strings for the map activity -->
    <string name="map_buttonTextShowPlayers">Show other players</string>
    <string name="map_noPlayersFound">No other players found.</string>
    <string name="map_permissionDeniedError">You did not permit location sharing…</string>
    <string name="map_permissionSharingFailed">Permission could not be shared</string>
    <string name="map_dialogTitlePrefix">Anonymous User</string>
    <string name="map_dialogOpenChat">Contact via chat</string>
    <string name="map_dialogCancel">Cancel</string>


    <string name="matchmaking_waiting">Waiting for match…</string>
    <string name="matchmaking_cancel">Cancel</string>


    <string name="tutorial_buttonTextGoBack">Back to main menu</string>

    <!-- Strings for the profile activity -->
    <string name="profile_dialogTitle">Upload Profile Picture</string>
    <string name="profile_takePicture">Take Picture</string>
    <string name="profile_chooseFromGallery">Choose from Gallery</string>
    <string name="profile_cancel">Cancel</string>
    <string name="profile_gallerySelectionTitle">Select Profile Picture</string>

    <string name="gameModeChooser_buttonLocal">Local</string>
    <string name="gameModeChooser_buttonBluetooth">Bluetooth</string>
    <string name="gameModeChooser_buttonRanked">Online Ranked</string>
    <string name="gameModeChooser_buttonUnranked">Online Unranked</string>
    <string name="gameModeChooser_title">Choose the Game Mode</string>
    <string name="gameModeChooser_loginTitle">Please log in with existing credentials for online-go.com</string>
    <string name="gameModeChooser_loginUsername">Your Username</string>
    <string name="gameModeChooser_loginPassword">Your password</string>
    <string name="gameModeChooser_buttonLoginSubmit">Submit</string>
    <string name="gameModeChooser_buttonChallenge">Create Challenge</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="chat">Chat</string>
    <string name="email">Email</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_bluetooth_game">BluetoothGameActivity</string>

    <string name="listen">Listen</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="listen_bt">Waiting for connection…</string>
    <string name="search_bt">Searching devices...</string>
    <string name="need_permission">Permission Needed</string>
    <string name="bt_permission_explain">Please allow accessing your location via the app settings in order to play via Bluetooth.</string>
    <string name="permission_ok">Permission Granted!</string>
    <string name="permission_fail">Permission Denied!</string>
    <string name="connection_start">Establishing Connection...</string>
    <string name="connection_error">Error while connecting device</string>
    <string name="title_activity_bluetooth">Bluetooth</string>

    <string name="title_activity_game_mode_chooser">GameModeChooserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="search_users">Search Users</string>
    <string name="anon_name">Anonymous Go Player</string>


</resources>