...
        android:layout_marginStart="16dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/game_scoreTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/game_frameLayout_boardFrame" />

    <TextView
        android:id="@+id/game_textView_blackScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
...
        android:text="@string/game_blackTurn"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_frameLayout_boardFrame" />

    <Button
        android:id="@+id/game_button_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="16dp"
...
